Fix font-size on small devices

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -9,11 +9,11 @@
 body {
   padding-top: 60px;
   overflow-y: scroll;
-  font-size: 0.8vw;
 }
 
 body * {
   font-family: 'Playfair Display', serif;
+  font-size: 16px;
 }
 
 section {
@@ -33,6 +33,7 @@ textarea {
 }
 
 /* typography */
+
 a {
   color:rgb(185, 53, 0);
 
@@ -53,21 +54,21 @@ h1, h2, h3, h4, h5, h6 {
 h1 {
   text-align: center;
   margin-bottom: 30px;
-  font-size: 1.5vw;
+  font-size: 150%;
 }
 
 h2 {
   margin-bottom: 25px;
   text-align: center;
   font-weight: normal;
-  font-size: 1.3vw;
+  font-size: 130%;
 }
 
 h3 {
   margin-bottom: 20px;
   text-align: center;
   font-weight: normal;
-  font-size: 1.1vw;
+  font-size: 110%;
 }
 
 p {
@@ -157,7 +158,7 @@ $gray-medium-light: #eaeaea;
   a {
     display: inline-block;
     vertical-align: top;
-    font-size: 0.8vw;
+    font-size: 80%;
     margin-left: 0px;
   };
 }
